# The_Machiavellian_Recomme_Supplementary-Material-Code

./: README.md
The_Machiavellian_Recomme_Supplementary Material code/: README.md  pyproject.toml  requirements.txt
The_Machiavellian_Recomme_Supplementary Material code/configs/: default.yaml
The_Machiavellian_Recomme_Supplementary Material code/scripts/: run_ablation.py  run_experiment.py  run_semi_real.py
The_Machiavellian_Recomme_Supplementary Material code/src/: __init__.py
The_Machiavellian_Recomme_Supplementary Material code/src/agents/: __init__.py  base.py  platform_agent.py  user_agent.py  vendor_agent.py
The_Machiavellian_Recomme_Supplementary Material code/src/baselines/: __init__.py  aga.py  agent_mixer.py  independent_ppo.py  maddpg.py  qmix.py  rlhf.py  soto.py
The_Machiavellian_Recomme_Supplementary Material code/src/config/: __init__.py  configs.py
The_Machiavellian_Recomme_Supplementary Material code/src/data/: __init__.py  amazon_reviews.py
The_Machiavellian_Recomme_Supplementary Material code/src/detection/: __init__.py  detector.py  mine.py  paraphrase.py
The_Machiavellian_Recomme_Supplementary Material code/src/environment/: __init__.py  arena.py  messaging.py  transaction.py  utility.py
The_Machiavellian_Recomme_Supplementary Material code/src/evaluation/: __init__.py  coalition.py  evaluator.py  metrics.py
The_Machiavellian_Recomme_Supplementary Material code/src/llm/: __init__.py  backend.py  inference.py
The_Machiavellian_Recomme_Supplementary Material code/src/models/: __init__.py  data_models.py
The_Machiavellian_Recomme_Supplementary Material code/src/training/: __init__.py  ablation.py  critic.py  losses.py  swa_trainer.py
The_Machiavellian_Recomme_Supplementary Material code/src/utils/: __init__.py  checkpoint.py  logging.py
The_Machiavellian_Recomme_Supplementary Material code/src/visualization/: __init__.py  plots.py
